# CrossPlat-Pong

./: .gitignore  .travis.yml  CMakeLists.txt
src/: pong.cpp  pong.hpp  util.hpp
